--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -16,6 +16,9 @@ world-chain-builder-node.workspace = true
 world-chain-builder-rpc.workspace = true
 world-chain-builder-chainspec.workspace = true
 
+rollup-boost.workspace = true
+flashblocks-p2p.workspace = true
+
 # reth
 reth-db.workspace = true
 
@@ -30,10 +33,8 @@ reth-node-builder.workspace = true
 reth-tracing.workspace = true
 reth-provider.workspace = true
 reth-transaction-pool.workspace = true
-
 reth-evm.workspace = true
 reth-revm = { workspace = true, features = ["std"] }
-
 reth-trie-db.workspace = true
 reth-rpc-server-types.workspace = true
 reth-tasks = { workspace = true, optional = true }
@@ -47,6 +48,7 @@ reth-optimism-chainspec.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-forks.workspace = true
 reth-optimism-primitives = { workspace = true, features = ["serde"] }
+reth-optimism-node.workspace = true
 
 # revm 
 revm.workspace = true
@@ -64,6 +66,7 @@ clap.workspace = true
 serde.workspace = true
 eyre.workspace = true
 parking_lot.workspace = true
+tokio.workspace = true
 
 # rpc
 serde_json.workspace = true
@@ -71,7 +74,6 @@ serde_json.workspace = true
 # test-utils dependencies
 reth-e2e-test-utils = { workspace = true, optional = true }
 alloy-genesis = { workspace = true, optional = true }
-tokio = { workspace = true, optional = true }
 tikv-jemallocator = { workspace = true, optional = true }
 
 [dev-dependencies]
