--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -10,16 +10,26 @@ optimism_package:
         cl_type: op-node
         cl_image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:v1.13.3
         el_builder_type: custom
-      - el_type: op-reth
-      - el_type: op-reth
+        el_builder_image: world-chain-builder:latest
+      - el_type: custom
+        el_image: world-chain-builder:latest
+        el_builder_type: custom
+        el_builder_image: world-chain-builder:latest
+        cl_type: op-node
+        cl_image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:v1.13.3
+      - el_type: custom
+        el_image: world-chain-builder:latest
+        el_builder_type: custom
+        el_builder_image: world-chain-builder:latest
+        cl_type: op-node
+        cl_image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:v1.13.3
       network_params: 
         seconds_per_slot: 2
         fjord_time_offset: 0
         granite_time_offset: 0
         holocene_time_offset: 0
-        isthmus_time_offset: 20
       mev_params:
-        image: "flashbots/rollup-boost:sha-e23bcc2"
+        image: "leytont/rollup-boost:p2p"
         type: custom
       additional_services:
         - rollup-boost
@@ -36,6 +46,7 @@ ethereum_package:
   participants:
   - el_type: geth
     cl_type: teku
+    cl_image: ethpandaops/teku:master-5a2aa76
   network_params:
     preset: minimal
     genesis_delay: 5
