--- a/Cargo.toml
+++ b/Cargo.toml
@@ -139,6 +139,7 @@ alloy-signer-local = { version = "1.0.23", default-features = false, features = 
 ] }
 alloy-sol-types = "1.3.0"
 alloy-serde = { version = "1.0.11", default-features = false }
+alloy-hardforks = { version = "0.3.0", default-features = false }
 
 # revm
 revm = { version = "29.0.0", default-features = false }
