--- a/crates/world/chainspec/Cargo.toml
+++ b/crates/world/chainspec/Cargo.toml
@@ -14,6 +14,7 @@ reth-optimism-chainspec.workspace = true
 reth-cli.workspace = true
 
 alloy-op-hardforks.workspace = true
+alloy-hardforks.workspace = true
 
 alloy-chains.workspace = true
 alloy-primitives.workspace = true
