feat: add basic eth api that can work over pending block

--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -48,7 +48,7 @@ reth-optimism-consensus.workspace = true
 reth-optimism-forks.workspace = true
 reth-optimism-primitives.workspace = true
 reth-optimism-node.workspace = true
-
+reth-rpc-eth-api.workspace = true
 # revm 
 revm.workspace = true
 
