--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -45,6 +45,7 @@ alloy-json-rpc.workspace = true
 op-alloy-consensus.workspace = true
 op-alloy-network.workspace = true
 op-alloy-rpc-types-engine.workspace = true
+op-alloy-rpc-types.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
 
@@ -62,6 +63,7 @@ metrics-derive.workspace = true
 parking_lot.workspace = true
 tracing.workspace = true
 jsonrpsee-core.workspace = true
+jsonrpsee-types.workspace = true
 jsonrpsee.workspace = true
 futures.workspace = true
 serde.workspace = true
