--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -35,6 +35,7 @@ reth-optimism-rpc.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-optimism-primitives.workspace = true
 reth-optimism-chainspec.workspace = true
+reth-optimism-evm.workspace = true
 
 # alloy
 alloy-consensus.workspace = true
@@ -44,6 +45,7 @@ alloy-eips.workspace = true
 op-alloy-consensus.workspace = true
 op-alloy-network.workspace = true
 op-alloy-rpc-types-engine.workspace = true
+op-alloy-rpc-types.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
 
