--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -84,3 +84,4 @@ jsonrpsee.workspace = true
 parking_lot.workspace = true
 serde_json.workspace = true
 rand.workspace = true
+bytes.workspace = true
