--- a/crates/world/flashblocks/Cargo.toml
+++ b/crates/world/flashblocks/Cargo.toml
@@ -47,7 +47,7 @@ op-alloy-rpc-types-engine.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
 
-rollup-boost.workspace = true
+flashblocks-primitives.workspace = true
 flashblocks-p2p.workspace = true
 
 # tokio
