--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -16,7 +16,7 @@ world-chain-builder-pool.workspace = true
 world-chain-builder-node.workspace = true
 world-chain-provider.workspace = true
 
-rollup-boost.workspace = true
+flashblocks-primitives.workspace = true
 
 reth.workspace = true
 reth-optimism-node.workspace = true
