--- a/crates/flashblocks/rpc/Cargo.toml
+++ b/crates/flashblocks/rpc/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "world-chain-builder-flashblocks"
+name = "flashblocks-rpc"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 
-
 [dependencies]
 # internal
-world-chain-provider.workspace = true
+flashblocks-primitives.workspace = true
+flashblocks-p2p.workspace = true
+flashblocks-builder.workspace = true
 
 # reth
 reth.workspace = true
@@ -33,7 +34,6 @@ reth-optimism-forks.workspace = true
 reth-optimism-node.workspace = true
 reth-optimism-rpc.workspace = true
 reth-optimism-payload-builder.workspace = true
-reth-optimism-primitives.workspace = true
 reth-optimism-chainspec.workspace = true
 
 # alloy
@@ -47,8 +47,6 @@ op-alloy-rpc-types-engine.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
 
-flashblocks-primitives.workspace = true
-flashblocks-p2p.workspace = true
 
 # tokio
 tokio.workspace = true
@@ -63,6 +61,4 @@ tracing.workspace = true
 jsonrpsee-core.workspace = true
 jsonrpsee.workspace = true
 futures.workspace = true
-serde.workspace = true
-serde_json.workspace = true
 eyre.workspace = true
