--- a/crates/flashblocks/primitives/Cargo.toml
+++ b/crates/flashblocks/primitives/Cargo.toml
@@ -19,14 +19,25 @@ url.workspace = true
 sha2.workspace = true
 arbitrary.workspace = true
 
+reth.workspace = true
 reth-optimism-payload-builder.workspace = true
 reth-rpc-layer.workspace = true
-op-alloy-rpc-types-engine.workspace = true
+reth-basic-payload-builder.workspace = true
+reth-optimism-primitives.workspace = true
+reth-optimism-node.workspace = true
+reth-chain-state.workspace = true
+reth-primitives.workspace = true
+
 alloy-rpc-types-engine.workspace = true
+alloy-consensus.workspace = true
+alloy-eips.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-primitives.workspace = true
 alloy-serde.workspace = true
 alloy-rlp.workspace = true
+
+op-alloy-consensus.workspace = true
+op-alloy-rpc-types-engine.workspace = true
 
 tokio-tungstenite.workspace = true
 metrics-derive.workspace = true
