--- a/crates/world/pool/Cargo.toml
+++ b/crates/world/pool/Cargo.toml
@@ -39,6 +39,7 @@ rayon.workspace = true
 serde.workspace = true
 
 [dev-dependencies]
+reth-transaction-pool.workspace = true
 world-chain-test.workspace = true
 test-case.workspace = true
 chrono.workspace = true
