--- a/crates/world/rpc/Cargo.toml
+++ b/crates/world/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "world-chain-builder-rpc"
+name = "world-chain-rpc"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
