--- a/crates/tests/sepolia/Cargo.toml
+++ b/crates/tests/sepolia/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 
 [dependencies]
 world-chain-test.workspace = true
-world-chain-builder-pbh.workspace = true
+world-chain-pbh.workspace = true
 
 alloy-primitives.workspace = true
 alloy-provider.workspace = true
