--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ flashblocks-payload = { path = "crates/flashblocks/payload" }
 
 # Internal
 world-chain-builder-node = { path = "crates/world/node" }
-world-chain-builder-pbh = { path = "crates/world/pbh" }
+world-chain-pbh = { path = "crates/world/pbh" }
 world-chain-builder-payload = { path = "crates/world/payload" }
 world-chain-rpc = { path = "crates/world/rpc" }
 world-chain-pool = { path = "crates/world/pool" }
