--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
-world-chain-builder-pbh.workspace = true
+world-chain-pbh.workspace = true
 world-chain-pool.workspace = true
 world-chain-builder-node.workspace = true
 world-chain-provider.workspace = true
