--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
-world-chain-builder-payload.workspace = true
+world-chain-payload.workspace = true
 world-chain-pool.workspace = true
 world-chain-provider.workspace = true
 
