--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ flashblocks-builder = { path = "crates/flashblocks/builder" }
 flashblocks-payload = { path = "crates/flashblocks/payload" }
 
 # Internal
-world-chain-builder-node = { path = "crates/world/node" }
+world-chain-node = { path = "crates/world/node" }
 world-chain-pbh = { path = "crates/world/pbh" }
 world-chain-payload = { path = "crates/world/payload" }
 world-chain-rpc = { path = "crates/world/rpc" }
