--- a/crates/tests/devnet/Cargo.toml
+++ b/crates/tests/devnet/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
-world-chain-builder-node.workspace = true
+world-chain-node.workspace = true
 world-chain-pool.workspace = true
 world-chain-test.workspace = true
 world-chain-pbh.workspace = true
