--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -13,7 +13,7 @@ workspace = true
 [dependencies]
 world-chain-pbh.workspace = true
 world-chain-pool.workspace = true
-world-chain-builder-node.workspace = true
+world-chain-node.workspace = true
 world-chain-provider.workspace = true
 
 flashblocks-primitives.workspace = true
