--- a/crates/world/bin/Cargo.toml
+++ b/crates/world/bin/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "world-chain-builder"
+name = "world-chain"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
