Osiris/eth api (#297)
* feat: add eth api tests + impls

* feat: add basic eth api that can work over pending block

* cleanup

* wip: implement LoadBlock

* wip

* wip

* wip: cleanup

* wip

* fix: ethereum package in devnet (#296)

* merge flashblocks-executor

* cleanup

* chore: satisfy clippy

* chore: cleanup tests

* chore: cleanup

* chore: cleanup flashblocks crates

--- a/crates/flashblocks/rpc/Cargo.toml
+++ b/crates/flashblocks/rpc/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 [dependencies]
 # internal
 flashblocks-primitives.workspace = true
-flashblocks-builder.workspace = true
+world-chain-provider.workspace = true
 
 # reth
 reth.workspace = true
@@ -26,13 +26,19 @@ reth-tasks.workspace = true
 
 # op-reth
 reth-optimism-rpc.workspace = true
+reth-optimism-forks.workspace = true
+reth-optimism-primitives.workspace = true
+reth-optimism-evm.workspace = true
 
 # alloy
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
+alloy-consensus.workspace = true
+alloy-rpc-types-engine.workspace = true
+
+op-alloy-rpc-types.workspace = true
 op-alloy-network.workspace = true
 op-alloy-rpc-types-engine.workspace = true
-alloy-rpc-types-engine.workspace = true
 
 # tokio
 tokio.workspace = true
