--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -36,7 +36,7 @@ alloy-genesis.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 alloy-sol-types.workspace = true
-alloy-signer-local = { workspace = true }
+alloy-signer-local.workspace = true
 alloy-signer.workspace = true
 alloy-network.workspace = true
 alloy-rpc-types.workspace = true
@@ -47,15 +47,15 @@ semaphore-rs.workspace = true
 bon.workspace = true
 serde.workspace = true
 
-reth-chain-state = { workspace = true }
-reth-db = { workspace = true }
-reth-prune-types = { workspace = true }
-reth-trie = { workspace = true }
-reth-e2e-test-utils = { workspace = true }
-revm-primitives = { workspace = true }
-futures = { workspace = true }
-chrono = { workspace = true }
-rand = { workspace = true }
+reth-chain-state.workspace = true
+reth-db.workspace = true
+reth-prune-types.workspace = true
+reth-trie.workspace = true
+reth-e2e-test-utils.workspace = true
+revm-primitives.workspace = true
+futures.workspace = true
+chrono.workspace = true
+rand.workspace = true
 tokio.workspace = true
 parking_lot.workspace = true
 
