--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -13,13 +13,14 @@ workspace = true
 [dependencies]
 world-chain-payload.workspace = true
 world-chain-pool.workspace = true
-world-chain-provider.workspace = true
+flashblocks-provider.workspace = true
 
 flashblocks-p2p.workspace = true
 flashblocks-primitives.workspace = true
 flashblocks-rpc.workspace = true
 flashblocks-builder.workspace = true
 flashblocks-payload.workspace = true
+flashblocks-cli.workspace = true
 
 reth.workspace = true
 reth-node-builder.workspace = true
