--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -14,9 +14,10 @@ workspace = true
 world-chain-pbh.workspace = true
 world-chain-pool.workspace = true
 world-chain-node.workspace = true
-world-chain-provider.workspace = true
+flashblocks-provider.workspace = true
 
 flashblocks-primitives.workspace = true
+flashblocks-cli.workspace = true
 
 reth.workspace = true
 reth-optimism-node.workspace = true
