--- a/crates/flashblocks/rpc/Cargo.toml
+++ b/crates/flashblocks/rpc/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 [dependencies]
 # internal
 flashblocks-primitives.workspace = true
-world-chain-provider.workspace = true
+flashblocks-provider.workspace = true
 
 # reth
 reth.workspace = true
